# Trashscope

./: AST.cpp  AST.h  CMakeLists.txt  Optimizer.cpp  Optimizer.h  README.md  Tokenizer.cpp  Tokenizer.h  Trashscope.cpp  errors.cpp  errors.h  myfib.cpp
